Fix DFG compilation of StringCharAt in 32 bits jsc debug build https://bugs.webkit.org/show_bug.cgi?id=229293

Patch by Mikhail R. Gadelha <mikhail@igalia.com> on 2021-08-20
Reviewed by Keith Miller.

In SpeculativeJIT::compileGetByValOnString the format can be either DataFormatJS
or DataFormatCell so assert either value when compiling it in 32 bits.
It's the same assert already present in the DFG 64 bits counterpart

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/240741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281324 268f45cc-cd09-0410-ab3c-d52691b4dbfc